<resources>
    <string name="app_name">Frengkas</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="service_name">Service Name</string>
    <string name="pilih_rentang_usia">Pilih Rentang Usia:</string>
    <string name="ok">OK</string>
    <string name="lokasi">Lokasi</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="pilih_jam">Pilih Jam</string>
    <string name="price">Price</string>
    <string name="pesan">Pesan</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="name">Name</string>
    <string name="pesanan_anda">Pesanan Anda :</string>
    <string name="layanan">Layanan</string>
    <string name="rentang_usia">Rentang Usia</string>
    <string name="waktu">Waktu</string>
    <string name="total_biaya">Total Biaya</string>
    <string name="booking">Booking</string>
    <string name="cancel">Cancel</string>
    <string name="sukses">Sukses!</string>
    <string name="pesanan_anda_telah_berhasil">Pesanan Anda Telah \n Berhasil</string>
    <string name="kembali_ke_halaman_utama">Kembali ke Halaman Utama</string>
    <string name="alamat_sekarang">Alamat Sekarang</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="servive_time">Servive - Time</string>
    <string name="status">Status</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="atas_name">Atas Name</string>
    <string name="description">Description</string>
    <string name="create_service">Create Service</string>
    <string name="create_category">Create Category</string>
    <string name="create">Create</string>
    <string name="category_name">Category Name</string>
    <string name="create_date">Create Date</string>
    <string name="create_time">Create Time</string>
    <string name="date_time">Date Time</string>
    <string name="time_start">Time Start</string>
    <string name="time_end">Time End</string>
</resources>
