<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="58dp">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_margin="10dp"
        android:text="@string/lokasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_lokasi"
        android:hint="@string/lokasi"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_margin="10dp"
        android:text="@string/pilih_tanggal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spn_date"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>

    <TextView
        android:layout_margin="10dp"
        android:text="@string/pilih_jam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spn_time"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>

    <Button
        android:id="@+id/btn_pesan"
        android:text="@string/pesan"
        android:layout_gravity="end"
        android:background="@color/colorWhite"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>