<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuccessActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_success"
            android:text="@string/sukses"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="34sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_pesan"

            android:text="@string/pesanan_anda_telah_berhasil"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_next"
            android:text="@string/kembali_ke_halaman_utama"
            android:background="#777373"
            android:textColor="@color/colorWhite"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>