<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.service.DetailServiceActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="#777373"
        android:layout_width="match_parent"
        android:layout_height="58dp">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/txt_service"
        android:text="@string/service_name"
        android:padding="5dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_desc_service"
        android:text="@string/description"
        android:padding="5dp"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_add"
        android:text="@string/create_category"
        android:layout_margin="5dp"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_color"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_category"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>