<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailOrderActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="#777373"
        android:layout_width="match_parent"
        android:layout_height="58dp">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/text"
        android:text="@string/pesanan_anda"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/layanan"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt_layanan"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:textSize="18sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/rentang_usia"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt_rentang"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:textSize="18sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/lokasi"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt_lokasi"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:textSize="18sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/waktu"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt_waktu"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:textSize="18sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt_pukul"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:textSize="18sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/total_biaya"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt_total"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:textSize="18sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/status"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt_status"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:textSize="18sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_decline"
        android:text="Cancel"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:layout_marginEnd="10dp"
        android:textColor="@color/colorWhite"
        android:background="#777373"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>