<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragment.RegisterFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/image_logo"
                android:text="Daftar Akun"
                android:textColor="@color/colorWhite"
                android:textSize="36sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <EditText
                android:id="@+id/txt_name"
                android:layout_below="@id/image_logo"
                android:inputType="textEmailAddress"
                android:hint="@string/name"
                android:background="@drawable/edit_text_color"
                android:padding="10dp"
                android:ems="10"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <EditText
                android:id="@+id/txt_email"
                android:layout_below="@id/txt_name"
                android:inputType="textEmailAddress"
                android:background="@drawable/edit_text_color"
                android:hint="@string/email"
                android:padding="10dp"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <EditText
                android:id="@+id/txt_alamat"
                android:layout_below="@id/txt_email"
                android:background="@drawable/edit_text_color"
                android:inputType="text"
                android:hint="@string/alamat_sekarang"
                android:padding="10dp"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <EditText
                android:id="@+id/txt_no"
                android:layout_below="@id/txt_alamat"
                android:background="@drawable/edit_text_color"
                android:inputType="phone"
                android:hint="@string/nomor_handphone"
                android:padding="10dp"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <EditText
                android:id="@+id/txt_password"
                android:layout_below="@id/txt_no"
                android:inputType="textPassword"
                android:background="@drawable/edit_text_color"
                android:hint="@string/password"
                android:padding="10dp"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <EditText
                android:id="@+id/txt_confir_password"
                android:layout_below="@id/txt_password"
                android:inputType="textPassword"
                android:background="@drawable/edit_text_color"
                android:hint="@string/confirmation_password"
                android:padding="10dp"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/btn_register"
                android:background="@drawable/button_color"
                android:textColor="@color/colorWhite"
                android:layout_below="@id/txt_confir_password"
                android:text="@string/register"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_centerHorizontal="true"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_margin="10dp"
                android:layout_below="@id/btn_register"
                android:textColor="@color/colorWhite"
                android:text="Sudah Punya Akun? Login Disini"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>