<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.service.CreateCategoryActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="#777373"
        android:layout_width="match_parent"
        android:layout_height="58dp">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_margin="5dp"
        android:text="@string/category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_category_name"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:ems="10"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:hint="@string/category_name"
        android:background="@drawable/edit_text_color"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_margin="5dp"
        android:text="@string/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_category_price"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:ems="10"
        android:hint="@string/price"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:background="@drawable/edit_text_color"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_margin="10dp"
        android:id="@+id/btn_create"
        android:text="@string/create"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_color"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>